(general) Fix form groups spacing

--- a/src/app/styles/_forms.scss
+++ b/src/app/styles/_forms.scss
@@ -12,10 +12,6 @@ formly-field {
   }
 }
 
-formly-field formly-group formly-field:not(:last-of-type) {
-  margin-bottom: 0;
-}
-
 formly-field-checkbox {
   +.form-text {
     padding-left: 1.5rem;
